# MollenLang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Ast/: Ast.cpp  Ast.h  CMakeLists.txt
CodeGen/: CMakeLists.txt  Codegen.cpp  Codegen.h
Lexer/: CMakeLists.txt  Helper.cpp  Helper.h  Lexer.cpp  Lexer.h  Scanner.cpp  Scanner.h  Token.h
Lexer/Helper/: CMakeLists.txt  Helper.cpp  Helper.h
Lexer/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
Lexer/Tokens/: CMakeLists.txt  Token.cpp  Token.h
Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Tests/: add.mol  div.mol  helloWorld.mol  mul.mol  sub.mol
